feat(transformers): implemented model saving for transformers